# qt_roi

./: .gitignore  CMakeLists.txt  LabelPress.cpp  LabelPress.h  mainwindow.cpp  mainwindow.h
